product_docs/docs/pgpool/4.2.5/index.mdx
---
title: "Pgpool-II Guide"
directoryDefaults:
  description: "EDB Postgres Pgpool-II Version 1 Documentation and release notes. PostgreSQL connection pooling tool."
  - pgpool_rel_notes
---

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/pgpool-ii/user-guides/pgpool-ii-guide/1.0/index.html"
  - "/edb-docs/d/pgpool-ii/user-guides/pgpool-ii-guide/1.0/conclusion.html"
  - "/edb-docs/d/pgpool-ii/user-guides/pgpool-ii-guide/1.0/genindex.html"
  - "/edb-docs/p/pgpool-ii/1.0"
---

Pgpool-II acts as middleware between client applications and a PostgreSQL database server.

Using Pgpool-II adds the following benefits to your application connection infrastructure:

-   Transparently reroutes and ensures load balancing of Read Only transactions to Standby database servers
-   Reuses connections to prevent reconnects
-   Brings down Postgres connections by queuing stale connections
-   Integrates with Failover managers to follow the primary

EDB supports the following Pgpool-II functionality:

-   Load balancing
-   Connection pooling
-   Replication
-   High availability
-   Connection limits
-   Watchdog
-   Limiting Exceeding Connections
-   In Memory Query Cache

**Conventions Used in this Guide**

The term Postgres refers to either PostgreSQL or EDB Postgres Advanced Server.

**What's New**

This release contains a merge with upstream, which includes the following bug fixes:

- Fix race condition between detach_false_primary and follow_primary_command.
- Fix broken database/app redirect preference in statement level load balancing mode.
- Fix pgpool crash when query cache enabled for non-streaming and logical replication mode.
- Fix query cache not being created in other than streaming and logical replication mode.
- Fix scenario where no primary node is found when detach_false_primary and follow_primary_command operation are running concurrently
- Fix hang when using asyncpg (Python frontend driver with asynchronous I/O)
- Enhance debug message upon receiving startup packet. Now it will print all the GUC variables in the log instead of just username, database name and application name. It will help clients to see why cached connections are not used.

For more information, please refer to the [Upstream release notes](https://www.pgpool.net/docs/42/en/html/release-4-2-3.html). 

!!! Note 
    4.2 is a major release. For more details on migrating from earlier versions to version 4.2, see the [Migration Section](https://www.pgpool.net/docs/42/en/html/release-4-2-0.html#AEN10359).

<div class="toctree" maxdepth="2">

 installing_and_configuring_the_pgpool-II extensions configuring_connection_pooling connecting_a_client_to_pgpool-II upgrade uninstalling_pgpool-II conclusion

</div>
